# Trishul_AI

./: .gitignore  main.py  package.json  pyproject.toml  requirement.txt  requirements.txt  setup.py  store_index.py  template.sh
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
research/: trial.ipynb
