[project]
name = "trishul-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-gemini>=0.1.1",
    "langchain-google-genai>=4.2.1",
    "langchain-pinecone>=0.2.13",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "unstructured[pdf]>=0.20.8",
]
